# SCCmecExtractor

./: .gitignore  CONTAINER_GUIDE.md  README.md  docker-entrypoint.sh  environment.yml  pyproject.toml
.github/workflows/: cd-pypi.yaml  cd_docker.yaml  ci-lint.yaml  ci-pytest.yaml  ci-test-install.yaml
containers/: Dockerfile  sccmecextractor.def
src/: extract_SCCmec.py  locate_att_sites.py
src/sccmecextractor/: blast_utils.py  extract_SCCmec.py  locate_att_sites.py  pipeline.py  report_sccmec.py  type_sccmec.py
src/sccmecextractor/data/: ccr_genes.fasta  mec_genes_allotypes.fasta  rlmH.fasta
tests/: conftest.py  test_att_sites.tsv  test_blast_utils.py  test_extract_SCCmec.py  test_locate_att_sites.py  test_pipeline.py  test_report_sccmec.py  test_type_sccmec.py
tests/SCCmec_extract_test/: GCF_000011925_SCCmec.fasta
tests/data/: GCF_000011925.1_ASM1192v1_genomic.gff3  expected_att_sites.tsv  test_genome.fna
tests/test_data/: expected_att_sites.tsv
