[project]
name = "sccmecextractor"
version = "0.1.0"
description = "SCCmecExtractor identifies and extracts SCCmec sequences from WGS"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LINCEN[CS]E*"]
authors = [
    {name = "Alison MacFadyen", email = "alison.macfadyen86@gmail.com"}
]
maintainers = [
    {name = "Alison MacFadyen", email = "alison.macfadyen86@gmail.com"}
]
keywords = ["microbiology", "sccmec", "amr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "biopython>=1.85"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pandas>=2.3.0"
]

[project.scripts]
sccmecextractor = "sccmecextractor.cli:main"

